--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tpm-website",
+  "homepage": "https://amytangzheng.github.io/tpm-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
